// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrderChooser > should render OrderChooser in default mode 1`] = `
<button
  aria-describedby="00000000-0000-4000-8000-000000000000"
  aria-label="Sort by date"
  class="tc-resource-picker-order-chooser _tc-resource-picker-order-chooser_0c35df btn-icon-only btn btn-link"
  type="button"
>
  <svg
    aria-hidden="true"
    class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-sort-desc"
    focusable="false"
    name="talend-sort-desc"
    pointer-events="none"
    shape-rendering="geometricPrecision"
  />
  <svg
    aria-hidden="true"
    class="tc-svg-icon tc-icon _svg_bf5f45 tc-resource-picker-order-indicator _tc-resource-picker-order-indicator_0c35df tc-icon-name-talend-caret-down"
    focusable="false"
    name="talend-caret-down"
    pointer-events="none"
    shape-rendering="geometricPrecision"
  />
</button>
`;

exports[`OrderChooser should render OrderChooser in default mode 1`] = `
<button
  aria-describedby="42"
  aria-label="Sort by date"
  class="tc-resource-picker-order-chooser theme-tc-resource-picker-order-chooser btn-icon-only btn btn-link"
  type="button"
>
  <span
    class="CoralIcon"
    name="talend-sort-desc"
  />
  <span
    class="CoralIcon tc-resource-picker-order-indicator theme-tc-resource-picker-order-indicator"
    name="talend-caret-down"
  />
</button>
`;
